test_results.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/openhands/micromamba/envs/openhands/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/openhands/micromamba/envs/openhands/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/openhands/micromamba/envs/openhands/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/openhands/micromamba/envs/openhands/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/openhands/micromamba/envs/openhands/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/openhands/micromamba/envs/openhands/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/packages/worker/test_worker.py", line 45
    async def test_execute_node():\n    async with websockets.connect("ws://localhost:7331/ws") as websocket:\n        code = "print(\'Hello from execute_node!\')"  \n        message = {"type": "execute_node", "id": "node-123", "code": code}\n        await websocket.send(json.dumps(message))\n\n        response = await websocket.recv()\n        result = json.loads(response)\n\n        assert result["type"] == "result"\n        assert result["id"] == "node-123"\n        assert result["status"] == "success"\n        assert "Hello from execute_node!" in result["stdout"]\n\n# To run the test, use an asyncio event loop\nif __name__ == "__main__":\n    asyncio.run(test_execute_node())\n
                                   ^
SyntaxError: unexpected character after line continuation character
